--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ function(assign_source_group filter src_dir list)
         endif()
         set(_tmp ${_tmp} ${_p})
         file(TO_NATIVE_PATH ${_p} _p)
-        message(STATUS "File \"${_p}\" added to the group \"${filter}\"")
+        # message(STATUS "File \"${_p}\" added to the group \"${filter}\"")
     endforeach()
     set(${list} ${_tmp} PARENT_SCOPE)
 endfunction(assign_source_group)
@@ -93,7 +93,7 @@ endif()
 
 if (NOT DEFINED CMAKE_LIBRARY_PATH)
     set(CMAKE_LIBRARY_PATH "..")
-    message(STATUS "Variable \"CMAKE_LIBRARY_PATH\" is undefined. Default value \"..\" is used")
+    # message(STATUS "Variable \"CMAKE_LIBRARY_PATH\" is undefined. Default value \"..\" is used")
 endif()
 
 add_libraries(${libraries})
