--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ function(assign_source_group filter src_dir list)
         endif()
         set(_tmp ${_tmp} ${_p})
         file(TO_NATIVE_PATH ${_p} _p)
-        message(STATUS "File \"${_p}\" added to the group \"${filter}\"")
+        # message(STATUS "File \"${_p}\" added to the group \"${filter}\"")
     endforeach()
     set(${list} ${_tmp} PARENT_SCOPE)
 endfunction(assign_source_group)
@@ -65,6 +65,9 @@ set(library_files_gsl gsl gslcblas)
 set(MSVC OFF)
 set(XCODE OFF)
 
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+enable_testing()
+
 if(${CMAKE_GENERATOR} MATCHES "Visual Studio")
     set(MSVC ON)
 elseif(${CMAKE_GENERATOR} MATCHES "Xcode")
@@ -74,7 +77,7 @@ endif()
 project(${target})
 enable_language(C)
 
-option(FORCE_POSIX_THREAD "POSIX threads Windows library is used instead of WinAPI" OFF)
+option(FORCE_POSIX_THREAD "POSIX threads library is used instead of WinAPI" OFF)
 
 if (MSVC)
     msvc_set_static_runtime()
@@ -93,7 +96,7 @@ endif()
 
 if (NOT DEFINED CMAKE_LIBRARY_PATH)
     set(CMAKE_LIBRARY_PATH "..")
-    message(STATUS "Variable \"CMAKE_LIBRARY_PATH\" is undefined. Default value \"..\" is used")
+    # message(STATUS "Variable \"CMAKE_LIBRARY_PATH\" is undefined. Default value \"..\" is used")
 endif()
 
 add_libraries(${libraries})
