--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ function(assign_source_group filter src_dir list)
             file(TO_NATIVE_PATH "${filter}/${_f}" _f)
             source_group("${_f}" FILES ${_p})
         elseif(XCODE)
-            string(REPLACE "/" " " _f "${_f}")
-            source_group("\"${filter}\" ${_f}" FILES ${_p})
+            string(REPLACE "/" "\\\\" _f "${_f}")
+            source_group("${filter}\\\\${_f}" FILES ${_p})
         endif()
         set(_tmp ${_tmp} ${_p})
         file(TO_NATIVE_PATH ${_p} _p)
