--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,10 +87,13 @@ if (MSVC)
     endif()
     remove_definitions(-D_MBCS)
     add_definitions(-D_UNICODE)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /GL /arch:AVX /volatile:ms")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LTCG")
-    disable_incremental(CMAKE_EXE_LINKER_FLAGS_DEBUG)
-    disable_incremental(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /arch:AVX /volatile:ms")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /GL")
+    set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} /GL")
+    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
+    set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} /LTCG")
+    disable_incremental(CMAKE_EXE_LINKER_FLAGS_RELEASE)
+    disable_incremental(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL)
     if (${FORCE_POSIX_THREADS})
         add_definitions(-DFORCE_POSIX_THREADS -DPTW32_STATIC_LIB)
         set(libraries ${libraries} pthread-win32)
@@ -116,5 +119,6 @@ assign_source_group("Header Files" ${src_dir} header_list)
 
 add_executable(${target} ${source_list} ${header_list})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${target})
-set_property(TARGET ${target} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+set_property(TARGET ${target} PROPERTY INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
+set_property(TARGET ${target} PROPERTY INTERPROCEDURAL_OPTIMIZATION_MINSIZEREL TRUE)
 link_libraries(${target} ${libraries})
