--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ matrix:
           - MATRIX_EVAL='CC=gcc && CXX=g++ && ARCH="x86_64" && CFG="Debug Release"'
 
 git:
-  - depth: 3
+  - depth: 1
 
 before_install:
-  - eval "${MATRIX_EVAL}"
+  - eval "$MATRIX_EVAL"
 
 install:
   - cd ..
