--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
       - os: linux
         dist: xenial
         env:
-          - MATRIX_EVAL='CC=gcc && CXX=g++ && ARCH="x86_64" && CFG="Debug Release"'
+          - MATRIX_EVAL="CC=gcc && CXX=g++ && ARCH=\"x86_64\" && CFG=\"Debug Release\""
 
 git:
   - depth: 1
