--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,11 @@ install:
   - mkdir gcc
   - cd gcc
   - if [ $MODE == "linux" ]; then
-        SRC=".." bash ../RegionsMT/.install/install_libraries.sh
+        SRC=".." bash ../RegionsMT/.install/install_libraries.sh;
     elif [ $MODE == "osx" ]; then
+        ;
     elif [ $MODE == "windows" ]; then
+        ;
     fi
 
 script:
