--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
       - os: linux
         dist: xenial
         env:
-          - MATRIX_EVAL='MODE="linux" && export CC="gcc" && export CXX="g++" && export ARCH="x86_64 i386" && export CFG="Debug Release"'
+          - MATRIX_EVAL='MODE="linux" && export CC="gcc" CXX="g++" ARCH="x86_64 i386" CFG="Debug Release"'
 
 before_install:
   - eval "$MATRIX_EVAL"
@@ -20,9 +20,9 @@ install:
   - if [ $MODE == "linux" ]; then
         SRC=".." bash ../RegionsMT/.install/install_libraries.sh;
     elif [ $MODE == "osx" ]; then
-        ;
+        travis_terminate 1;
     elif [ $MODE == "windows" ]; then
-        ;
+        travis_terminate 1;
     fi
 
 script:
