--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ matrix:
         dist: xenial
         env:
           - MATRIX_EVAL='MODE="linux" && export CC="gcc" CXX="g++" ARCH="x86_64 i386" CFG="Debug Release"'
+        addons:
+            apt:
+                packages:
+                  - gcc-multilib
 
 before_install:
   - eval "$MATRIX_EVAL"
+  - sudo apt-get install
 
 install:
   - cd ..
