--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
       - os: linux
         dist: xenial
         env:
-          - MATRIX_EVAL='MODE="linux" && export CC="gcc" CXX="g++" ARCH="x86_64 i386" CFG="Debug Release"'
+          - MATRIX_EVAL='MODE="linux"'
         addons:
             apt:
                 packages:
@@ -16,20 +16,17 @@ matrix:
 
 before_install:
   - eval "$MATRIX_EVAL"
-  - sudo apt-get install
 
 install:
-  - cd ..
-  - mkdir gcc
-  - cd gcc
-  - if [ $MODE == "linux" ]; then
-        SRC=".." bash ../RegionsMT/.install/install_libraries.sh;
-    elif [ $MODE == "osx" ]; then
+  - if [ "$MODE" == "linux" ]; then
+        export TOOLCHAIN="gcc clang" ARCH="x86_64 i386" CFG="Debug Release"
+        bash ../RegionsMT/.install/install_libraries.sh;
+    elif [ "$MODE" == "osx" ]; then
         travis_terminate 1;
-    elif [ $MODE == "windows" ]; then
+    elif [ "$MODE" == "windows" ]; then
         travis_terminate 1;
     fi
 
 script:
   - cd ../RegionsMT
-  - LIBRARY_PATH="../gcc" INSTALL_PATH="../gcc" make -j
+  - make -j
