--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,13 +22,13 @@ build_script:
   - ps: |
         $env:CHERE_INVOKING="1"
         $env:GIT=C:\msys64\usr\bin\bash.exe -c '/usr/bin/which git'
-  - C:\msys64\usr\bin\bash.exe -lc "$MAKE -j all"
+  - C:\msys64\usr\bin\bash.exe -lc "$MAKE --warn-undefined-variables -j all"
 
 test_script:
-  - C:\msys64\usr\bin\bash.exe -lc "$MAKE -j -k test || true"
+  - C:\msys64\usr\bin\bash.exe -lc "$MAKE --warn-undefined-variables -j -k test || true"
             
 after_test:
-  - C:\msys64\usr\bin\bash.exe -lc "$MAKE -j CLEAN=git\(gsl\)\ all\(gsl\)\ git\(pthread-win32\)\ all\(pthread-win32\) clean"
+  - C:\msys64\usr\bin\bash.exe -lc "$MAKE --warn-undefined-variables -j CLEAN='all git(gsl) all(gsl) git(pthread-win32) all(pthread-win32)' clean"
 
 for:
   -
