--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc-multilib clang-10 llvm-10 llvm-10-dev lld-10
     - name: Setting up environment
-      run: echo ::set-env name=MATRIX::$(echo {clang,gcc}:{x86_64,i386}:{Debug,Release})
+      run: echo ::set-env name=MATRIX::$(echo {clang-10,gcc}:{x86_64,i386}:{Debug,Release})
     - name: Make
       run: make --warn-undefined-variables -R -j all        
     - name: Make test
