--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,8 @@ clone_depth: 1
 
 environment:
     matrix:
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-        MSYSTEM: MSYS2
+#      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+#        MSYSTEM: MSYS2
       - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
         MSYSTEM: MINGW32
         ARCH: i686
